--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,29 @@ section{
 	padding-left: 30px;
 	background-size: 10%;
 }
+.search{
+	width: 200px;
+	height: 26px;
+	margin: 20px auto;
+	border-radius: 0.3em;
+	box-shadow: 5px 0px 5px #edede5,-5px 0px 5px #edede5,0px 5px 5px #edede5,0px -5px 5px #edede5;
+}
+.search input{
+	border-width: 0;
+	padding-left: 10px;
+	margin-top:3px;
+	width: 100px;
+	border-radius: 0.3em 0 0 0.3em;
+}
+.search span{
+	display: block;
+	float: right;
+	background-color: #95CE65;
+	width: 50px;
+	height: 26px;
+	background-image: url(../psd18859/search.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 30%;
+	border-radius: 0 0.3em 0.3em 0;
+}
