--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,63 @@ section{
 	background-size: 30%;
 	border-radius: 0 0.3em 0.3em 0;
 }
+.share{
+	width: 200px;
+	background-color: white;
+	box-shadow: 5px 0px 10px #edede5,-5px 0px 10px #edede5,0px 5px 10px #edede5,0px -5px 10px #edede5;
+	border-radius: 0.3em;
+	overflow: hidden;
+	list-style: none;
+	padding:0;
+}
+.share li{
+	float: left;
+	width: 66px;
+	height: 30px;
+	background-size: 280%;
+	background-repeat: no-repeat;
+	background-image: url(../psd18859/share.jpg);
+}
+.share :nth-child(1){
+	background-position: 25px center; 
+	border-right: 1px solid lightgray;
+}
+.share :nth-child(2){
+	background-position: center;
+}
+.share :nth-child(3){
+	background-position: -145px center;
+	border-left: 1px solid lightgray;
+}
+.weather{
+	margin: 20px auto;
+	width: 250px;
+	height: 100px;
+	border-radius: 0.3em;
+	box-shadow: 5px 0px 10px #edede5,-5px 0px 10px #edede5,0px 5px 10px #edede5,0px -5px 10px #edede5;
+	overflow: hidden;
+}
+.weather>span{
+	height: 100px;
+	width: 100px;
+	float: left;
+	background-color: #6bcbca;
+	border-radius: 0.3em 0 0 0.3em;
+	background-image: url(../psd18859/weather6bcbca.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	
+}
+.weather ul{
+	list-style-type: none;
+	margin: 20px auto;
+	color: #94846D;
+}
+.weather ul :nth-child(1){
+	font-size: 30px;
+}
+.weather ul :nth-child(1) a{
+	display: inline-block;
+    padding-left: 23px;
+    padding-bottom: 3px;
+}
