--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-section{
+.login{
 	text-align: center;
 	margin: 0 auto;
 	width: 300px;
@@ -7,18 +7,18 @@ section{
 	background-color: white;
 	box-shadow: 5px 0px 5px #edede5,-5px 0px 5px #edede5,0px 5px 5px #edede5,0px -5px 5px #edede5;
 }
-.title{
+.login .title{
 	background-color: #95ce65;
 	width: 300px;
 	height: 30px;
 	border-radius: 1em 1em 0 0;
 }
-.title>p{
+.login .title>p{
 	padding-top:5px;
 	color: white;
 	font-weight: bold;
 }
-.input input{
+.login .input input{
 	margin:10px auto;
 	display: block;
 	width: 220px;
@@ -26,26 +26,26 @@ section{
 	border: 1px solid #94846d;
 	border-radius: 5%;
 }
-.input input[type="text"]{
+.login .input input[type="text"]{
 	background-repeat: no-repeat;
 	background-size: 7%;
 	background-position:7px 6px; 
 	background-image: url(../psd18859/login.jpg);
 	padding-left: 30px;
 }
-.input input[type="password"]{
+.login .input input[type="password"]{
 	background-repeat: no-repeat;
 	background-size: 7%;
 	background-position:7px -50px; 
 	background-image: url(../psd18859/login.jpg);
 	padding-left: 30px;
 }
-.loginbutton{
+.login .loginbutton{
 	background-color: #edede5;
 	height: 72px;
 	border-radius: 0 0 1em 1em;
 }
-.button span{
+.login .button span{
 	margin-top: 12px;
 	background-color: #ff6766;
 	box-shadow: 0 5px #ff4b4a;
@@ -146,4 +146,121 @@ section{
 	display: inline-block;
     padding-left: 23px;
     padding-bottom: 3px;
+}
+.info{
+	margin: 20px auto;
+	background-color: #edede5;
+	width: 300px;
+	border-radius: 0.3em;
+	box-shadow: 5px 0px 10px #edede5,-5px 0px 10px #edede5,0px 5px 10px #edede5,0px -5px 10px #edede5;
+}
+.info .header{
+	background-image: url(../psd18859/Twitterback.jpg);
+	background-size:100%;
+	background-repeat: no-repeat;
+	border-radius: 0.3em;
+	overflow: hidden;
+}
+.info .header .photo{
+	float: left;
+}
+.info .header img{
+	margin: 12px;
+	border: 1px solid white;
+	border-radius: 50%;
+	padding: 5px;
+}
+.info .header .name ul{
+	list-style: none;
+	display: inline-block;
+	margin-top: 30px;
+	margin-left: -30px;
+	color: white;
+}
+.info .header .name ul li:nth-child(1){
+	font-size: 20px;
+	font-weight: bold;
+}
+.info .amount ul{
+	list-style: none;
+	color:#afa492;
+}
+.info .amount>ul{
+	overflow: hidden;
+	padding: 0;
+}
+.info .amount>ul>li{
+	float: left;
+}
+.info .amount>ul>li>ul{
+	padding: 0;
+}
+.info .amount>ul>li>ul>li{
+	text-align: center;
+	width: 98px;
+}
+.info .amount>ul>li>ul li:nth-child(1){
+	font-size: 20px;
+}
+.info .amount>ul>li>ul li:nth-child(2){
+	font-size: 12px;
+}
+.info .amount>ul>li:nth-child(1) ul,.info .amount>ul>li:nth-child(2) ul{
+	border-right: 1px solid #ddddd5;
+}
+.info .textarea{
+	background-color: white;
+	text-align: center;
+	height: 60px;
+	padding: 10px;
+}
+.info .textarea textarea{
+	height:27px;
+	width: 89%;
+	padding: 15px;
+	
+}
+.info .footer ul{
+	list-style: none;
+	overflow: hidden;
+	margin: 10px 0 10px 6px;
+	padding-left: 0;
+}
+.info .footer ul li{
+	float: left;
+}
+.info .footer ul li{
+	background-image: url(../psd18859/Twitterbutton.png);
+	padding: 5px;
+	background-repeat: no-repeat;
+	margin: 0 5px;
+	border-radius: 0.2em;
+	background-size: 340%;
+}
+.info .footer ul li:nth-child(1){
+	width: 45px;
+	height: 25px;
+	background-color: #94846d;
+	background-position: 16px 6px;
+}
+.info .footer ul li:nth-child(2){
+	width: 45px;
+	height: 25px;
+	background-color: #94846d;
+	background-position: -52px 6px;
+}
+.info .footer ul li:nth-child(3){
+	width: 140px;
+	height: 25px;
+	background-color: #ff6766;
+	background-position:-153px 6px ;
+	background-size: 136%;
+}
+.info .footer ul li:nth-child(3) a{
+	margin: 4px 0 0 57px;
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: 1px;
 }
